# opengl-tutorial

./: CMakeLists.txt  build-linux-debug.sh  build-windows-debug.ps1  imgui.ini
res/shaders/: basic.shader
src/: CMakeLists.txt  gl_error.h  index_buffer.cpp  index_buffer.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
src/tests/: CMakeLists.txt  test.h  test_clear_color.cpp  test_clear_color.h  test_menu.cpp  test_menu.h  test_texture_2d.cpp  test_texture_2d.h
